--- a/TestProjectHtml/css/kommandoranStyles.css
+++ b/TestProjectHtml/css/kommandoranStyles.css
@@ -21,14 +21,19 @@
     }
 
 #alarm {
-    width: 50px;
-    height: 30px;
-    background: url(/images/alarm.png);
+    
+    position: relative;
+  padding: 6px 40px;
+  text-align: center;
     background-color: #FFFF00;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center; 
 }
+
+#alarm img {
+    position: absolute;
+  left: 6px;
+  top: 50%;
+    height: 25px;
+  transform: translateY(-50%);}
 
 footer {
     position: absolute;
